<resources>
    <string name="app_name">HabitizerApp</string>
    <string name="app_title">Habitizer</string>
    <string name="add_routine">Add Routine</string>
    <string name="routine">Routine</string>
    <string name="estimated_routine_time">Estimated Routine Time</string>
    <string name="routine_view">Routine View</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estimated_time">estimated time</string>
    <string name="actual_time">actual time</string>
    <string name="start_routine">Start Routine</string>
    <string name="stop_routine">Stop Routine</string>
    <string name="add_task">Add Task</string>
    <string name="sample_task">Sample Task</string>
    <string name="edits_a_task">edits a task</string>
    <string name="deletes_a_task">deletes a task</string>
    <string name="time_taken">Time Taken</string>
    <string name="restart">Restart</string>
    <string name="pause">Pause</string>
    <string name="invalid_task">Invalid task name, please change it!</string>
    <string name="invalid_start">Please add a task to start your routine!</string>
    <string name="invalid_time">Invalid estimated time, please change it!</string>
    <string name="delete_routine">delete_routine</string>
    <string name="add_routine_button_text">Add Routine</string>
    <string name="minutes_shorthand">m</string>
    <string name="invalid_delete">Cannot delete the last routine!</string>
    <string name="edit_routine">edit_routine</string>
</resources>