<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.routine.RoutineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Routine Header Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/routine_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/task_list_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/routine_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/routine"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/estimated_time"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/estimated_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/estimated_time"
                app:layout_constraintBottom_toTopOf="@+id/actual_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/routine_title"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/actual_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/actual_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/routine_title"
                app:layout_constraintTop_toBottomOf="@id/estimated_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Task List Section -->
        <ListView
            android:id="@+id/task_list_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            app:layout_constraintTop_toBottomOf="@id/routine_name"
            app:layout_constraintBottom_toTopOf="@id/button_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/task_view"/>


        <!-- Bottom Button Bar -->
        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/button_bar"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:flexWrap="wrap"
            app:justifyContent="center"
            app:alignItems="center">

            <!-- FrameLayout to Stack Start and Stop Routine Buttons -->
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <Button
                    android:id="@+id/start_routine_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/start_routine" />

                <Button
                    android:id="@+id/stop_routine_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@android:color/white"
                    android:text="@string/stop_routine"
                    android:visibility="invisible"/>

            </FrameLayout>

            <Button
                android:id="@+id/add_task_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/white"
                android:text="@string/add_task" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fast_forward_timer_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp"
                android:clickable="true"
                android:src="@drawable/ic_ff_timer"
                app:fabCustomSize="35dp" />

            <!-- FrameLayout to Stack Pause and Restart Buttons -->
            <FrameLayout
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/pause_timer_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/pause"
                    android:src="@android:drawable/ic_media_pause"
                    app:fabCustomSize="35dp"
                    android:layout_gravity="center" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/restart_timer_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contentDescription="@string/restart"
                    android:src="@android:drawable/ic_media_play"
                    app:fabCustomSize="35dp"
                    android:visibility="invisible"
                    android:layout_gravity="center" />

            </FrameLayout>

        </com.google.android.flexbox.FlexboxLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
