...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="124dp"
        android:layout_height="38dp"
        android:layout_marginStart="6dp"
        android:gravity="center"
        android:text="@string/sample_task"
        android:textSize="18dp"
...
